--- a/excelplay_echo/Pipfile
+++ b/excelplay_echo/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "==2.0.8"
 pytz = "==2018.3"
 djangorestframework = "==3.8.2"
+redisleaderboard = {editable = true, git = "https://github.com/traintraveler/redis-leaderboard.git"}
 
 [dev-packages]
 
