--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 # Created by https://www.gitignore.io/api/python
-
+.vscode/
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
